--- a/server/package.json
+++ b/server/package.json
@@ -6,22 +6,16 @@
   "scripts": {
     "start": "node server.js"
   },
-  "dependencies": {{
-  "name": "shinhanlife-agent-api",
-  "version": "0.1.0",
-  "type": "module",
-  "main": "server.js",
-  "scripts": { "start": "node server.js" },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "helmet": "^7.0.0",
-    "morgan": "^1.10.0",
-    "nodemailer": "^6.9.13",
-    "sqlite3": "^5.1.7",
-    "sqlite": "^5.1.6"   // ← 이 줄 추가
-  }
+  "cors": "^2.8.5",
+  "dotenv": "^16.4.5",
+  "express": "^4.19.2",
+  "helmet": "^7.0.0",
+  "morgan": "^1.10.0",
+  "nodemailer": "^6.9.13",
+  "sqlite3": "^5.1.7",
+  "sqlite": "^4.2.1" 
+  
 }
 
     "cors": "^2.8.5",
